AM_CPPFLAGS = -I$(top_srcdir)/cdirect -I$(top_srcdir)/direct -I$(top_srcdir)/stogo -I$(top_srcdir)/subplex -I$(top_srcdir)/praxis -I$(top_srcdir)/luksan -I$(top_srcdir)/crs -I$(top_srcdir)/mlsl -I$(top_srcdir)/util

include_HEADERS = nlopt.h
noinst_LTLIBRARIES = libapi.la
dist_man_MANS = nlopt_minimize.3

libapi_la_SOURCES = nlopt.c nlopt.h
