AM_CPPFLAGS = -I$(top_srcdir)/util -I$(top_srcdir)/api

noinst_LTLIBRARIES = libstogo.la
libstogo_la_SOURCES = global.cc linalg.cc local.cc stogo.cc tools.cc	\
global.h linalg.h local.h stogo_config.h stogo.h tools.h

EXTRA_DIST = testros.cc tst.cc tstc.c prog.cc testfun.h rosen.h README	\
paper.pdf techreport.pdf COPYRIGHT
